# edge-tts-rust

./: Cargo.toml  README.md  makefile
.github/workflows/: android.yml
src/: lib.rs  tts.rs  voice.rs
